// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BehaviorInput should render 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      aria-hidden="true"
      class="form-group page-asset-criteria form-group-autofit"
      data-aria-hidden="true"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div>
        test
      </div>
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      >
        triggered
      </div>
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      >
        <b />
      </div>
      <div
        class="form-group-item entity-name mr-0 form-group-item-label form-group-item-shrink"
      >
        on
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <button
          aria-activedescendant=""
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Page or Asset Type"
          class="form-control form-control-select form-control-select-secondary operator-input"
          role="combobox"
          tabindex="0"
          type="button"
        >
          Asset Type
        </button>
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <button
          aria-activedescendant=""
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Asset Type"
          class="form-control form-control-select-secondary operator-input form-control-select"
          role="combobox"
          tabindex="0"
          type="button"
        >
          Select a Type
        </button>
      </div>
      <div
        class="w-100"
      />
      <div
        class="form-group-item mt-2 form-group-item-shrink"
      >
        <div
          class="input-group-item input-list-root"
          style="max-width: 52rem;"
        >
          <div
            class="form-control form-control-tag-group"
            style="max-width: 52rem; overflow-y: auto;"
          >
            <div
              class="label label-root label-secondary label-dismissible"
            >
              <span
                class="label-item"
              >
                123123123
              </span>
              <span
                class="label-item label-item-after"
              >
                <button
                  aria-label="Close"
                  class="button-root close btn btn-secondary"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times icon-root"
                    role="presentation"
                  >
                    <use
                      href="#times"
                    />
                  </svg>
                </button>
              </span>
            </div>
            <button
              aria-label="Clear"
              class="button-root text-secondary btn btn-unstyled"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times-circle icon-root"
                role="presentation"
              >
                <use
                  href="#times-circle"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="form-group-item mt-2 form-group-item-shrink"
      >
        <button
          class="btn btn-secondary"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <div
      class="form-group form-group-autofit"
    >
      <div
        aria-hidden="true"
        class="form-group-item form-group-item-shrink"
        data-aria-hidden="true"
      >
        <button
          aria-activedescendant="ge"
          aria-controls="clay-id-6"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="clay-id-6"
          class="form-control form-control-select form-control-select-secondary operator-input show"
          role="combobox"
          style=""
          tabindex="0"
          type="button"
        >
          at least
        </button>
      </div>
      <div
        aria-hidden="true"
        class="form-group-item form-group-item-shrink"
        data-aria-hidden="true"
      >
        <input
          class="input-root form-control number-input"
          data-testid="occurence-count-input"
          min="0"
          type="number"
          value=""
        />
      </div>
      <div
        aria-hidden="true"
        class="form-group-item unit form-group-item-label form-group-item-shrink"
        data-aria-hidden="true"
      >
        time(s)
      </div>
      <div
        aria-hidden="true"
        class="form-group-item form-group-item-shrink"
        data-aria-hidden="true"
      >
        <button
          aria-activedescendant="ever"
          aria-controls="clay-id-8"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="clay-id-8"
          class="form-control form-control-select form-control-select-secondary conjunction-input show"
          data-testid="conjunction-input"
          role="combobox"
          style=""
          tabindex="0"
          type="button"
        >
          ever
        </button>
      </div>
      <div
        aria-hidden="true"
        class="form-group-item form-group-item-shrink"
        data-aria-hidden="true"
      />
    </div>
    <div
      aria-hidden="true"
      class="form-group form-group-autofit"
      data-aria-hidden="true"
    >
      <button
        class="button-root btn btn-secondary"
        type="button"
      >
        <svg
          class="lexicon-icon lexicon-icon-plus"
          role="presentation"
        >
          <use
            href="#plus"
          />
        </svg>
        <span
          class="ml-2"
        >
          Add Event Attribute
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`BehaviorInput should render w/ data 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group page-asset-criteria form-group-autofit"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div>
        test
      </div>
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      >
        triggered
      </div>
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      >
        <b />
      </div>
      <div
        class="form-group-item entity-name mr-0 form-group-item-label form-group-item-shrink"
      >
        on
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <button
          aria-activedescendant=""
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Page or Asset Type"
          class="form-control form-control-select form-control-select-secondary operator-input"
          role="combobox"
          tabindex="0"
          type="button"
        >
          Asset Type
        </button>
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <button
          aria-activedescendant=""
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Asset Type"
          class="form-control form-control-select-secondary operator-input form-control-select"
          role="combobox"
          tabindex="0"
          type="button"
        >
          Select a Type
        </button>
      </div>
      <div
        class="w-100"
      />
      <div
        class="form-group-item mt-2 form-group-item-shrink"
      >
        <div
          class="input-group-item input-list-root"
          style="max-width: 52rem;"
        >
          <div
            class="form-control form-control-tag-group"
            style="max-width: 52rem; overflow-y: auto;"
          >
            <div
              class="label label-root label-secondary label-dismissible"
            >
              <span
                class="label-item"
              >
                123123123
              </span>
              <span
                class="label-item label-item-after"
              >
                <button
                  aria-label="Close"
                  class="button-root close btn btn-secondary"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times icon-root"
                    role="presentation"
                  >
                    <use
                      href="#times"
                    />
                  </svg>
                </button>
              </span>
            </div>
            <button
              aria-label="Clear"
              class="button-root text-secondary btn btn-unstyled"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times-circle icon-root"
                role="presentation"
              >
                <use
                  href="#times-circle"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="form-group-item mt-2 form-group-item-shrink"
      >
        <button
          class="btn btn-secondary"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <div
      class="form-group form-group-autofit"
    >
      <div
        class="form-group-item form-group-item-shrink"
      >
        <button
          aria-activedescendant=""
          aria-expanded="false"
          aria-haspopup="listbox"
          class="form-control form-control-select form-control-select-secondary operator-input"
          role="combobox"
          tabindex="0"
          type="button"
        >
          at least
        </button>
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <input
          class="input-root form-control number-input"
          data-testid="occurence-count-input"
          min="0"
          type="number"
          value="123"
        />
      </div>
      <div
        class="form-group-item unit form-group-item-label form-group-item-shrink"
      >
        time(s)
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <button
          aria-activedescendant=""
          aria-expanded="false"
          aria-haspopup="listbox"
          class="form-control form-control-select form-control-select-secondary conjunction-input"
          data-testid="conjunction-input"
          role="combobox"
          tabindex="0"
          type="button"
        >
          ever
        </button>
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      />
    </div>
    <div
      class="form-group form-group-autofit"
    >
      <button
        class="button-root btn btn-secondary"
        type="button"
      >
        <svg
          class="lexicon-icon lexicon-icon-plus"
          role="presentation"
        >
          <use
            href="#plus"
          />
        </svg>
        <span
          class="ml-2"
        >
          Add Event Attribute
        </span>
      </button>
    </div>
  </div>
</div>
`;
